swag handlers url path refactored
